# MazeBenchEngine

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_PYPI.md  THIRD_PARTY_NOTICES.md  main.py  package-lock.json  package.json  pyproject.toml  server.js
.claude/: launch.json
.github/workflows/: ci.yml  prime-harness-compatibility.yml  publish.yml
configs/eval/: mazebench_vision.toml
configs/rl/: mazebench.toml
docs/: packaging.md  prime-verifiers-plan.md
docs/rewrite/: FEATURE-ATTACHMENTS-AND-SLOPES.md  FEATURE-SLOPES-NOTES.md  FEATURE-TOOLBOX-NOTES.md
environments/mazebench/: README.md  example.toml  mazebench_cli_harness.py  mazebench_codex_harness.py  mazebench_kimi_harness.py  prime-harness-catalog.json  prime-harness-certification.json  pyproject.toml
environments/mazebench/mazebench/: auto_quit.py  harness.py  legacy.py  mazebench.py
environments/mazebench/mazebench/prompts/: multiturn_system.txt  multiturn_user.txt
environments/mazebench/mazebench/runtime/environments/mazebench/: prime-harness-certification.json
environments/mazebench/mazebench/runtime/games/maze/: level_parsing.json  toolbox.json
environments/mazebench/mazebench/runtime/games/maze/assets_3d/: b1.glb  b2.glb  b3.glb  b4.glb  gem.glb  st3.glb  t1.glb  t4.glb
environments/mazebench/mazebench/runtime/games/maze/levels/: 1eijlhzsam.txt  2imvr48nnz.txt  2usw76lu77.txt  3mjv8fybux.txt  3mxxdbl8lk.txt  5ufa4nkpse.txt  6apt9pi50k.txt  6arq0oefiy.txt  acfbtpxob3.txt  atcquxzhzq.txt  b1biuff2xo.txt  bdsknxfz71.txt  beznpglxoe.txt  bin0sfvkoo.txt  bno97iwqko.txt  cx0cblpdop.txt  dfizxjsozb.txt  dlacrytrti.txt  dtte3qdung.txt  eeykj34fht.txt  esbw2xgh1e.txt  g6cwrixq6c.txt  gtiuoosv7v.txt  h8d41sdgbt.txt  hdvjkrwgt1.txt  hst9zxbgla.txt  ipjkvd0ftt.txt  iufsaauspn.txt  iwbwmbcdyx.txt  izfhw6j9vx.txt  jbmr4tzxb6.txt  jhliaoplxr.txt  js6dwv7eu5.txt  jtbthporan.txt  jzlholnboh.txt  kue0z21zup.txt  l03iufzqh7.txt  lrvgy706km.txt  lwyjbf97lx.txt  lxlxdxjrdd.txt  (+31 more)
environments/mazebench/mazebench/runtime/public/: agent-run.js  agent.js  author-play-data.js  author-shell.js  author-theme.css  author.js  build-theme.css  local-site.css  maze-engine.js  maze-solver.js  play-core.js  play-gameplay.js  play-movement.js  play-render-actors.js  play-render-effects.js  play-render-terrain.js  play-render-three.js  play-theme.css  play-world-transitions.js  play.js  styles.css  world-solver.js
environments/mazebench/mazebench/runtime/scripts/: codex-play.js  maze-agent-local.js  maze-bridge.js  maze-export-replay.js  maze-export-solution.js  maze-mcp-server.js  maze-prime-live-eval.py  maze-prime-run.js  maze-python-sandbox.js  maze-render-frame.js  maze-terminal.js
environments/mazebench/mazebench/runtime/server/: agent-runs.js  app.js  build-worlds-local.js  maze-levels.js  page-chrome.js  pages.js  prime-resume.js  router.js  run-branch.js  solver-exports.js  token-usage.js  training.js
environments/mazebench/mazebench/runtime/shared/: auto-quit.js  maze-ascii-palette.js  maze-observation-contract.js
environments/mazebench/mazebench_codex/: __init__.py
environments/mazebench/mazebench_harnesses/: __init__.py  cli.py  codex.py  common.py  kimi.py
environments/mazebench/mazebench_tools/: __init__.py  __main__.py
environments/mazebench_agent/: README.md  pyproject.toml
environments/mazebench_agent/mazebench_agent/: __init__.py
games/: __init__.py
games/maze/: __init__.py  level_parsing.json  player.py  world_map.json  world_parsing.json
games/shared/: __init__.py  (+1 more)
mazebench_cli/: __init__.py  __main__.py
public/: agent-run.js  agent.js  author-play-data.js  author-shell.js  author-solver-worker.js  author-theme.css  author.js  big-play.js  build-theme.css  build.js  flyover.js  level-preview.js  local-site.css  maze-engine.js  maze-solver.js  maze-token-patterns.js  play-core.js  play-gameplay.js  play-movement.js  play-render-actors.js  play-render-compositor.js  play-render-effects.js  play-render-terrain.js  play-render-three.js  play-render.js  play-rules.js  play-theme.css  play-world-transitions.js  play.js  site.css  styles.css  train.js  world-map.js  world-solver-worker.js  world-solver.js
scripts/: build-python-runtime.js  codex-play.js  maze-agent-local.js  maze-bridge.js  maze-certify-prime-harnesses.py  maze-export-replay.js  maze-mcp-server.js  maze-model-repl.js  maze-play.js  maze-prime-harness-catalog.py  maze-prime-run.js  maze-python-sandbox.js  maze-render-frame.js  maze-terminal.js  maze-update-verifiers-pin.py  maze-verify-prime-resume.py  maze-verify-prime-tools.py  package-agent-runtime.py  playwright-process.js  prime-create-evaluation.js  sync-runtime.js
server/: agent-runs.js  app.js  maze-levels.js  maze-preview.js  maze-world-map.js  page-chrome.js  pages.js  prime-resume.js  router.js  run-branch.js  support.js  token-usage.js  training.js
shared/: auto-quit.js  board-state.js  maze-ascii-palette.js
tests/: agent-launch-transition.test.js  agent-queue.test.js  agent-run-branching.test.js  agent-run-config-source.test.js  agent-run-favorites.test.js  agent-run-feed-source.test.js  agent-run-heatmap-source.test.js  agent-run-performance-source.test.js  agent-run-playback-source.test.js  agent-run-review.test.js  agent-run-world-map-source.test.js  agent-tool-isolation.test.js  agent-tools-workspace.test.js  author-editor-interactions.test.js  author-inventory.test.js  author-play-data.test.js  author-shell-source.test.js  author-solver-worker.test.js  author-tool-catalog.test.js  auto-quit.test.js  build-worlds-local.test.js  engine-parity.test.js  flyover-source.test.js  maze-engine.test.js  maze-levels-author.test.js  maze-mcp-server.test.js  maze-python-sandbox.test.js  maze-solver.test.js  maze-terminal.test.js  prime-custom-harness.test.js  prime-eval-sync.test.js  prime-harnesses.test.js  prime-hosted-eval.test.js  prime-resume-environment.test.js  prime-resume.test.js  prime-verifiers-auto-quit.test.js  prime-verifiers-auto-quit.test.py  render-silhouette.test.js  renderer-lifecycle.test.js  site-parity-source.test.js  (+7 more)
(+213 files in other folders)
