[project]
name = "mazebench"
description = "JS-backed ASCII maze benchmark for multi-turn language models."
tags = ["maze", "game", "ascii", "reasoning", "train", "eval"]
version = "0.1.0"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
    "datasets>=4.0.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "mazebench/**/*.py",
    "mazebench/prompts/*.txt",
    "mazebench/runtime/**/*",
    "README.md",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
