[project]
name = "mazebench"
description = "JS-backed ASCII maze benchmark for multi-turn language models."
tags = ["maze", "game", "ascii", "reasoning", "train", "eval"]
version = "0.1.7"
license = "MIT"
requires-python = ">=3.11,<3.14"
dependencies = [
    "nodejs-wheel==24.16.0",
    "verifiers @ git+https://github.com/PrimeIntellect-ai/verifiers.git@18740ec9ea7418cbd55cd1e9fbf051080059be15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "mazebench/**/*.py",
    "mazebench/prompts/*.txt",
    "mazebench/runtime/**/*",
    "mazebench_codex/**/*.py",
    "mazebench_tools/**/*.py",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
